--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "deck-of-cards": "^0.1.8",
+    "cards": "^2.0.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
