--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@rneui/base": "^4.0.0-rc.5",
+    "@rneui/themed": "^4.0.0-rc.5",
     "@types/lodash": "^4.14.182",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
