--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@rneui/base": "^4.0.0-rc.5",
-    "@rneui/themed": "^4.0.0-rc.5",
     "@types/lodash": "^4.14.182",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
@@ -20,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
