--- a/app.json
+++ b/app.json
@@ -16,12 +16,19 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-3940256099942544/2247696110"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./libs/assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
+      },
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-3940256099942544/2247696110"
       }
     },
     "web": {
