--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.182",
     "expo": "~45.0.0",
+    "expo-ads-admob": "~13.0.0",
     "expo-status-bar": "~1.3.0",
     "i18n": "^0.15.0",
     "lodash": "^4.17.21",
