--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/lodash": "^4.14.182",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
     "i18n": "^0.15.0",
     "lodash": "^4.17.21",
     "react": "17.0.2",
