--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.182",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "i18n": "^0.15.0",
