--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.182",
-    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-ads-admob": "~13.0.0",
     "expo-status-bar": "~1.3.0",
@@ -20,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-vector-icons": "^9.2.0",
