--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.182",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-ads-admob": "~13.0.0",
+    "expo-constants": "^13.1.1",
     "expo-status-bar": "~1.3.0",
     "i18n": "^0.15.0",
     "lodash": "^4.17.21",
