--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "tailwindcss": "^3.0.24",
