--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~45.0.0",
     "expo-ads-admob": "~13.0.0",
     "expo-constants": "^13.1.1",
+    "expo-sharing": "^10.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "i18n": "^0.15.0",
