--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-constants": "^13.1.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
+    "firebase": "^9.9.1",
     "i18n": "^0.15.0",
     "lodash": "^4.17.21",
     "react": "17.0.2",
