--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "expo-ads-admob": "~13.0.0",
     "expo-constants": "^13.1.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
+    "expo-updates": "~0.13.4",
     "i18n": "^0.15.0",
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-async-storage": "^0.0.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "4.2.4",
