--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.1",
     "@types/lodash": "^4.14.182",
     "dotenv": "^16.0.1",
     "expo": "~45.0.0",
@@ -26,6 +28,7 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
