--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.18.6",
     "react-native": "0.68.2",
     "react-native-async-storage": "^0.0.1",
     "react-native-dotenv": "^3.3.1",
