--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "expo": "~45.0.0",
     "expo-ads-admob": "~13.0.0",
     "expo-constants": "^13.1.1",
+    "expo-localization": "~13.0.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
     "i18n": "^0.15.0",
+    "i18next": "^21.9.2",
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
