--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -25,7 +25,7 @@
     "@trpc/react-query": "^10.38.1",
     "@trpc/server": "^10.38.0",
     "expo": "^49.0.8",
-    "expo-ads-admob": "^13.0.0",
+    "expo-build-properties": "^0.8.3",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-localization": "^14.3.0",
