--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -14,7 +14,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "dev-client:ios-simulator": "eas build --platform ios --profile preview --local",
-    "dev-client:android": "eas build --platform android --profile development --local",
+    "dev-client:android": "export ANDROID_HOME=$HOME/Library/Android/sdk/ && eas build --platform android --profile development --local",
     "start-dev-client": "expo start --dev-client"
   },
   "dependencies": {
