--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -19,7 +19,6 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
-    "@react-native-async-storage/async-storage": "^1.18.2",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^4.33.0",
     "@trpc/client": "^10.38.0",
@@ -34,12 +33,12 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "i18next": "^23.4.6",
+    "jotai": "^2.4.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.1",
     "react-native": "0.72.4",
-    "react-native-async-storage": "^0.0.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
