--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -43,6 +43,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-google-mobile-ads": "^12.1.0",
+    "react-native-paper": "^5.10.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "superjson": "1.13.1"
