--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,4 @@ jobs:
         run: pnpm install
 
       - name: Build, lint and type-check
-        run: pnpm turbo build lint format typecheck
-
-      - name: Check workspaces
-        run: pnpm manypkg check
+        run: pnpm lint format typecheck
