--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": ">=v18.8.0"
   },
+  "packageManager": "pnpm@8.7.0",
   "scripts": {
     "clean": "git clean -xdf node_modules",
     "dev": "npx expo start --android",
