--- a/package.json
+++ b/package.json
@@ -63,13 +63,15 @@
     "@expo/config-plugins": "^7.2.5",
     "@types/babel__core": "^7.20.1",
     "@types/react": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
     "eslint": "^8.48.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "expo-dev-client": "^2.4.8",
     "prettier": "^3.0.3",
     "tailwindcss": "3.3.2",
     "typescript": "^5.2.2"
-  },
-  "eslintConfig": {
-    "root": true
   }
 }
