--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/client": "^10.38.0",
     "@trpc/react-query": "^10.38.1",
     "@trpc/server": "^10.38.0",
+    "autoprefixer": "^10.4.15",
     "expo": "^49.0.8",
     "expo-build-properties": "^0.8.3",
     "expo-constants": "~14.4.2",
@@ -42,6 +43,7 @@
     "i18next": "^23.4.6",
     "jotai": "^2.4.1",
     "nativewind": "^2.0.11",
+    "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.1",
