--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "node": ">=v18.8.0"
   },
-  "packageManager": "pnpm@8.7.0",
+  "packageManager": "pnpm@8.6.5",
   "scripts": {
     "clean": "git clean -xdf node_modules",
     "dev": "npx expo start --android",
@@ -39,6 +39,7 @@
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "^0.18.12",
     "i18next": "^23.4.6",
     "jotai": "^2.4.1",
     "nativewind": "^2.0.11",
