--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -30,11 +30,13 @@
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-localization": "^14.3.0",
+    "expo-modules-autolinking": "^1.5.1",
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "i18next": "^23.4.6",
     "jotai": "^2.4.1",
+    "metro": "0.76.7",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -47,6 +49,7 @@
     "react-native-paper": "^5.10.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
+    "react-native-vector-icons": "^10.0.0",
     "superjson": "1.13.1"
   },
   "devDependencies": {
