--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -34,6 +34,7 @@
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "^0.18.12",
     "i18next": "^23.4.6",
     "jotai": "^2.4.1",
     "metro": "0.76.7",
