--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -22,7 +22,8 @@
       }
     },
     "production": {
-      "extends": "base"
+      "extends": "base",
+      "channel": "production"
     }
   },
   "submit": {
