--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -13,10 +13,10 @@
     "typecheck": "tsc --noEmit",
     "android": "expo run:android",
     "ios": "npx expo run:ios",
-    "dev-client:ios-simulator": "eas build --platform ios --profile preview --local",
-    "dev-client:android": "export ANDROID_HOME=$HOME/Library/Android/sdk/ && eas build --platform android --profile development --local",
+    "build:dev-client:ios-simulator": "eas build --platform ios --profile preview --local",
+    "build:dev-client:android": "export ANDROID_HOME=$HOME/Library/Android/sdk/ && eas build --platform android --profile development --local",
     "start-dev-client": "npx expo start --dev-client",
-    "export": "expo export --platform android"
+    "export": "expo export --platform android "
   },
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
