--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -24,7 +24,8 @@
     },
     "production": {
       "extends": "base",
-      "channel": "production"
+      "channel": "production",
+      "autoIncrement": true
     }
   },
   "submit": {
