--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -24,7 +24,7 @@
     },
     "production": {
       "extends": "base",
-      "channel": "production",
+      "channel": "main",
       "autoIncrement": true
     }
   },
