--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "version": ">= 3.3.0",
-    "appVersionSource": "local"
+    "appVersionSource": "remote"
   },
   "build": {
     "base": {
