--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "create-t3-turbo",
   "private": true,
   "engines": {
-    "node": ">=v18.8.0"
+    "node": ">=20.4.0"
   },
-  "packageManager": "pnpm@8.7.0",
   "scripts": {
     "build": "turbo build",
     "clean": "git clean -xdf node_modules",
