--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@trpc/client": "^10.38.1",
 		"@trpc/react-query": "^10.38.1",
 		"@trpc/server": "^10.38.1",
+		"dotenv": "^16.4.5",
 		"expo": "~51.0.9",
 		"expo-build-properties": "^0.12.1",
 		"expo-constants": "~16.0.2",
