--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
 	"organizeImports": {
-		"enabled": true
+		"enabled": false
 	},
 	"linter": {
 		"enabled": true,
@@ -10,7 +10,7 @@
 			"suspicious": {
 				"noArrayIndexKey": "off"
 			},
-			"style":{
+			"style": {
 				"noNonNullAssertion": "off"
 			}
 		}
