--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"main": "expo-router/entry",
 	"version": "1.0.0",
 	"scripts": {
-		"start": "expo start",
+		"start": "export NODE_OPTIONS=--max_old_space_size=4096 &&  expo start",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
@@ -41,7 +41,7 @@
 		"i18next": "^23.4.6",
 		"jotai": "^2.4.1",
 		"metro": "0.80.9",
-		"nativewind": "^4.0.36",
+		"nativewind": "2.0.11",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-i18next": "^13.2.1",
