--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: pnpm
 
       - name: Setup Expo and EAS
@@ -40,7 +40,7 @@ jobs:
         run: echo "date=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_OUTPUT
 
       - name: Run Build & Submit to Production
-        working-directory: ./apps/expo
+        working-directory: ./
         env:
           BUILD_DATE: ${{ steps.date.outputs.date }}
         run: |
